--- a/src/css/login.css
+++ b/src/css/login.css
@@ -51,3 +51,12 @@
   width: 100%;
   font-size: 10em;
 }
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+  font-size: 10em;
+}
